// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Separator renders with className 1`] = `
<div
  className="separator className"
>
  <hr />
</div>
`;

exports[`Separator renders without className 1`] = `
<div
  className="separator"
>
  <hr />
</div>
`;
